--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ html, body {
   padding: 0;
   background-color: #51a6ff;
 }
+.body{
+  position: relative;
+}
 
 /* Header */
 header {
@@ -36,8 +39,53 @@ header {
 
 canvas {
   max-height: 650px;
+  z-index:1;
+  position: relative;
 }
 
 #audio{
 display: none
+}
+
+#over{
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform:  translate(-50%, -50%) scale(.4);
+  z-index:-1;
+  opacity: 0;
+}
+#over.active{
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+  transition: 1000ms all ease;
+  z-index:100;
+}
+#over .over-img {
+  display: block;
+  max-width: 500px;
+}
+#over .over-img img{
+  display: block;
+  width: 100%;
+  max-width: 100%;
+}
+#over a{
+  display: block;
+  font-family: arial, sans-serif;
+  font-size: 16px;
+  color:#fff;
+  background: #000;
+  line-height: 1;
+  padding: 15px 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  margin: 20px auto 0;
+  max-width: 100px;
+  text-align: center;
+  width: 100%;
+}
+#over a:hover{
+  opacity: .8;
+  transition: all ease 1000ms;
 }
